<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout_customer_service_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/table_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            android:weightSum="100">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="35"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/service_number"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="25"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/units"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="40"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/consumption_cost"
                android:textColor="@color/black" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/bill_history_item" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/txt_current_meter_reading">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditText_current_meter_reading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:digits="@string/alpha_number_digit"
                android:enabled="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLength="10"
                android:maxLines="1"
                android:textColor="@drawable/text_colors" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/consumption_cost">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditText_consumption_cost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:enabled="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="8"
                android:maxLines="1"
                android:textColor="@drawable/text_colors" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/txt_save"
            android:textColor="@android:color/white" />
    </LinearLayout>
</RelativeLayout>